# projektrising

./: .env  .gitignore  README.md  hubspot_mapping.json  hubspot_product.json  pipedrive_capabilities.json  pipedrive_mapping.json  pipedrive_product.json  pipedrive_raw_spec.json  pyproject.toml  testapp_capabilities.json  testapp_mapping.json  testcrm_mapping.json  testcrm_product.json
tests/: __init__.py  test_builder.py  test_cli_selection.py  test_config_store.py  test_crm_client.py  test_discovery.py  test_end_to_end.py  test_hubspot_adapter.py  test_models.py  test_registry.py  test_selection.py
tests/fixtures/: hubspot_spec.json
toolkit_engine/: __init__.py  demo.py
toolkit_engine/cli/: __init__.py  main.py
toolkit_engine/core/: __init__.py  config_store.py  discovery.py  models.py  registry.py  selection.py
toolkit_engine/generator/: __init__.py  builder.py  crm_client.py
toolkit_engine/products/: __init__.py  base.py  hubspot.py  pipedrive.py
